# TutoCMake_1

./: .gitignore  CMakeLists.txt
cmake/: defines.h.in
source/src/mymath/mymath/: MyMath.cpp  MyMath.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: Main.cpp
src/mymath/: CMakeLists.txt
